django/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: peoplefinder
  labels:
    app: peoplefinder
spec:
  replicas: 1
  selector:
    matchLabels:
      app: peoplefinder-container
  template:
    metadata:
      labels:
        app: peoplefinder-container
    spec:
      containers:
        - name: peoplefinder
          image: mastertos/peoplefinder:1
          command: ['sh', 'runserver.sh']
          ports:
            - containerPort: 8000
          volumeMounts: &mount
          - name: static
            mountPath: /static
        - name: peoplefinder-static
          image: nginx:alpine
          resources:
            requests:
              cpu: 10m
              memory: 30Mi
          ports:
          - containerPort: 80
          volumeMounts:
          - name: static
            mountPath: /usr/share/nginx/html/static
      volumes:
        - name: static
          emptyDir: {}
