django/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: peoplefinder-service
spec:
  selector:
    app: peoplefinder-container
  ports:
  - protocol: TCP
    port: 8000
    targetPort: 8000
  type: NodePort
